objects/ProductRequestLineItem.object
<CustomObject>
    <fields>
        <fullName>Account_Marketing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Marketing)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Request Line Items</relationshipLabel>
        <relationshipName>Product_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Jobs__r.Candidate_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Start_Date__c</fullName>
        <formula>Jobs__r.Start_Date_Accepted_Offer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filled_In_Tinley__c</fullName>
        <formula>Parent.Marketing_Request__r.Filled_In_Tinley__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filled In Tinley</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <formula>Parent.Marketing_Request__r.Installer_Name__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Age__c</fullName>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Requisition_Essentials__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Requisition Essentials</label>
        <referenceTo>Job_Requisition_Essentials__c</referenceTo>
        <relationshipLabel>Product Request Line Items</relationshipLabel>
        <relationshipName>Product_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Title_Department__c</fullName>
        <formula>Jobs__r.Job_Title__r.Name  &amp; &quot;/&quot; &amp;   Jobs__r.Department_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title/Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jobs</label>
        <referenceTo>Jobs__c</referenceTo>
        <relationshipLabel>Product Request Line Items</relationshipLabel>
        <relationshipName>Product_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Parent.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Complete_Date__c</fullName>
        <label>Marketing Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Request_ID__c</fullName>
        <formula>Parent.Marketing_Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Request_Location__c</fullName>
        <formula>Parent.Marketing_Request__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Request Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <label>Marketing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Backordered</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Person_Requesting__c</fullName>
        <formula>Parent.Marketing_Request__r.Name_of_Person_Requesting__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Person Requesting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Location__c</fullName>
        <formula>TEXT(Parent.Marketing_Request__r.Pickup_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pickup Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Request_Filled__c</fullName>
        <formula>Parent.Total_Order_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Request Filled</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ProductRequestLineItems</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>Parent</columns>
        <columns>Marketing_Status__c</columns>
        <columns>Product2</columns>
        <columns>WorkOrder</columns>
        <columns>WorkOrderLineItem</columns>
        <columns>Marketing_Request_ID__c</columns>
        <columns>DestinationLocation</columns>
        <columns>SourceLocation</columns>
        <columns>Case</columns>
        <columns>Account</columns>
        <columns>Location_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Request Line Items</label>
    </listViews>
    <listViews>
        <fullName>Brad</fullName>
        <columns>Name_of_Person_Requesting__c</columns>
        <columns>Pickup_Location__c</columns>
        <columns>Location_Name__c</columns>
        <columns>Name</columns>
        <columns>Parent</columns>
        <columns>Marketing_Status__c</columns>
        <columns>Status</columns>
        <columns>Product2</columns>
        <columns>QuantityRequested</columns>
        <filterScope>Everything</filterScope>
        <label>Marketing Item Lines</label>
    </listViews>
    <listViews>
        <fullName>Completed_Chromebits_TVs</fullName>
        <booleanFilter>3 and (1 or 2)</booleanFilter>
        <columns>Account_Marketing__c</columns>
        <columns>Name</columns>
        <columns>Product2</columns>
        <columns>Serial_Number__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>chromebit</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>49&quot;</value>
        </filters>
        <filters>
            <field>Marketing_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Chromebits/TVs</label>
    </listViews>
    <listViews>
        <fullName>HR_Job_Essentials_Requests_Initial</fullName>
        <columns>Name</columns>
        <columns>Product2</columns>
        <columns>Jobs__c</columns>
        <columns>Job_Title_Department__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Description__c</field>
            <operation>contains</operation>
            <value>Human Resources</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Candidate_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>HR Job Essentials Requests (Initial)</label>
    </listViews>
    <listViews>
        <fullName>HR_Job_Essentials_w_Start_Date</fullName>
        <columns>Name</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Candidate_Start_Date__c</columns>
        <columns>Product2</columns>
        <columns>Job_Title_Department__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Jobs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Description__c</field>
            <operation>contains</operation>
            <value>Human Resources</value>
        </filters>
        <filters>
            <field>Completed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Candidate_Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>HR Job Essentials w/ Start Date</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Warehouse</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 and 8) OR (1 AND 5 and 8) OR (1 AND 6 and 8) OR (1 AND 7 and 8)</booleanFilter>
        <columns>CreatedDate</columns>
        <columns>Name_of_Person_Requesting__c</columns>
        <columns>Location_Name__c</columns>
        <columns>Account_Marketing__c</columns>
        <columns>Marketing_Status__c</columns>
        <columns>Filled_In_Tinley__c</columns>
        <columns>Product2</columns>
        <columns>QuantityRequested</columns>
        <columns>Name</columns>
        <columns>Pickup_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Pickup_Location__c</field>
            <operation>equals</operation>
            <value>Springfield,Burr Ridge,Champaign,Peoria,Rockford,LaSalle,Watseka,Tinley Park</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notContain</operation>
            <value>FSG</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notContain</operation>
            <value>Abraham</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>VIP</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>Folds</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>Touch</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notContain</operation>
            <value>go live kit</value>
        </filters>
        <label>Marketing Warehouse - Burr Ridge</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Warehouse_Burr_Ridge</fullName>
        <booleanFilter>((1 AND 2 AND 3) OR (1 AND 4) OR (1 and 10) or (1 AND 5) OR (1 and 2 AND 6) ) and 7 and 8 and 9</booleanFilter>
        <columns>CreatedDate</columns>
        <columns>Name_of_Person_Requesting__c</columns>
        <columns>Account_Marketing__c</columns>
        <columns>Marketing_Status__c</columns>
        <columns>Filled_In_Tinley__c</columns>
        <columns>Product2</columns>
        <columns>QuantityRequested</columns>
        <columns>Marketing_Request_ID__c</columns>
        <columns>Name</columns>
        <columns>Pickup_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Pickup_Location__c</field>
            <operation>equals</operation>
            <value>Collinsville,Springfield,Burr Ridge,Champaign,Peoria,Rockford,LaSalle,Watseka,Tinley Park</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notContain</operation>
            <value>Abraham</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>VIP</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>folds</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>touch,AE Player TV</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notEqual</operation>
            <value>$1M Giveaway Help Cards (Pack of 50),1M Sweepstakes Sticker (Pack of 250),Dangler - 1M Sweepstakes (Pack of 6),Postcard - 1M Giveaway</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notContain</operation>
            <value>go live kit</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>notContain</operation>
            <value>install</value>
        </filters>
        <filters>
            <field>Product2</field>
            <operation>startsWith</operation>
            <value>Pre-Made</value>
        </filters>
        <label>Marketing Warehouse - Burr Ridge2</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Warehouse_Pre_Made_Promotion</fullName>
        <columns>Location_Name__c</columns>
        <columns>Name_of_Person_Requesting__c</columns>
        <columns>Pickup_Location__c</columns>
        <columns>Name</columns>
        <columns>QuantityRequested</columns>
        <columns>Product2</columns>
        <columns>Marketing_Status__c</columns>
        <columns>Parent</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product2</field>
            <operation>contains</operation>
            <value>Pre-Made</value>
        </filters>
        <filters>
            <field>Marketing_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Backordered</value>
        </filters>
        <label>Marketing Warehouse - Pre-Made Promotion</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>